--- a/style.css
+++ b/style.css
@@ -69,21 +69,27 @@ tr:nth-child(odd) {
     background-color: #dcebdf;
 }
 
-li#thumbsup /* ul:first-child ?*/ {
-    background-image: url(https://raw.githubusercontent.com/becodeorg/CRL-Keller-5/main/1.Path/1.The_Field/1.4.HTML-CSS/assets/bien.png?token=GHSAT0AAAAAAB24UHN6M6ZLGTIEU5BEH3ZGY3U7HHQ) no-repeat;
-    padding-right: 50%;
+ul:first-child {
+    background-image: url(https://raw.githubusercontent.com/becodeorg/CRL-Keller-5/main/1.Path/1.The_Field/1.4.HTML-CSS/assets/bien.png?token=GHSAT0AAAAAAB24UHN6M6ZLGTIEU5BEH3ZGY3U7HHQ);
+    background-size: 15px;
+    background-repeat: no-repeat;
+    padding-right: 50px;
 
 }
 
-li#thumbsdown /* ul: */ {
+ul:nth-child(2) {
     background-image: url(https://raw.githubusercontent.com/becodeorg/CRL-Keller-5/main/1.Path/1.The_Field/1.4.HTML-CSS/assets/mal.png?token=GHSAT0AAAAAAB24UHN7J5272A6VORTF7PPKY3U7HMQ) no-repeat;
 }
 
-li#cats {
+ul:nth-child(3) {
     background-image: url(https://raw.githubusercontent.com/becodeorg/CRL-Keller-5/main/1.Path/1.The_Field/1.4.HTML-CSS/assets/chat.png?token=GHSAT0AAAAAAB24UHN6QMVWIX4C6WXLCHKUY3U7HOQ) no-repeat;
 }
 
 img {
     float: left;
     margin: 20px;
+}
+
+html {
+    font-family: 'Open Sans';
 }
